# PromtFlow

./: CMakeLists.txt  README.md  main.cpp
src/app/: HistoryEntry.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/graph/: ConnectionLine.cpp  ConnectionLine.h  NodeItem.cpp  NodeItem.h  NodeScene.cpp  NodeScene.h
src/network/: GeminiApiClient.cpp  GeminiApiClient.h
src/nodes/: GenerationNode.cpp  GenerationNode.h  ImageRefNode.cpp  ImageRefNode.h  JsonPromptNode.cpp  JsonPromptNode.h  StylePresetNode.cpp  StylePresetNode.h  TextPromptNode.cpp  TextPromptNode.h
src/resources/: app_icon.rc  resources.qrc
src/widgets/: ClickableLabel.cpp  ClickableLabel.h  HistoryPanel.cpp  HistoryPanel.h
